--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -2,6 +2,15 @@
 html, body {
   background-color: #eee;
 }
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
 .navbar {
   margin-bottom: 0;
 }
