--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -44,8 +44,8 @@ h2 {
 /* Page header tweaks */
 .page-header {
   background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
+  padding: 10px 20px 5px;
+  margin: -20px -20px 10px;
 }
 
 /* posts index */
@@ -56,7 +56,7 @@ h2 {
 }
 .post > h3.title span.date { 
   color: #999;
-  font-size: 12px;
+  font-size: 0.9em;
 }
 .post > .more {
   margin:10px 0;
