--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -56,7 +56,7 @@ h2 {
 }
 .post > h3.title span.date { 
   color: #999;
-  font-size: 0.9em;
+  font-size: 12px;
 }
 .post > .more {
   margin:10px 0;
